--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 
-.timeline {
+.timeline{
+    list-style: none;
+    padding: 20px 0 20px;
+    position: relative;
+}
+
+
+.timeline2{
     list-style: none;
     padding: 20px 0 20px;
     position: relative;
@@ -15,8 +22,24 @@
         left: 50%;
         margin-left: -1.5px;
     }
+ 
+.timeline2:before {
+        top: 0;
+        bottom: 0;
+        position: absolute;
+        content: " ";
+        width: 3px;
+        background-color: #eeeeee;
+        left: 50%;
+        margin-left: -1.5px;
+    }
 
     .timeline > li {
+        margin-bottom: 20px;
+        position: relative;
+    }
+
+    .timeline2 > li {
         margin-bottom: 20px;
         position: relative;
     }
@@ -27,7 +50,17 @@
             display: table;
         }
 
+        .timeline2 > li:before,
+        .timeline2 > li:after {
+            content: " ";
+            display: table;
+        }
+
         .timeline > li:after {
+            clear: both;
+        }
+
+        .timeline2 > li:after {
             clear: both;
         }
 
@@ -37,7 +70,17 @@
             display: table;
         }
 
+        .timeline2 > li:before,
+        .timeline2 > li:after {
+            content: " ";
+            display: table;
+        }
+
         .timeline > li:after {
+            clear: both;
+        }
+        
+        .timeline2 > li:after {
             clear: both;
         }
 
@@ -52,7 +95,30 @@
             box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
         }
 
+        .timeline2 > li > .timeline-panel {
+            width: 46%;
+            float: left;
+            border: 1px solid #d4d4d4;
+            border-radius: 2px;
+            padding: 20px;
+            position: relative;
+            -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+            box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+        }
+
             .timeline > li > .timeline-panel:before {
+                position: absolute;
+                top: 26px;
+                right: -15px;
+                display: inline-block;
+                border-top: 15px solid transparent;
+                border-left: 15px solid #ccc;
+                border-right: 0 solid #ccc;
+                border-bottom: 15px solid transparent;
+                content: " ";
+            }
+
+            .timeline2 > li > .timeline-panel:before {
                 position: absolute;
                 top: 26px;
                 right: -15px;
@@ -76,7 +142,39 @@
                 content: " ";
             }
 
+            .timeline2 > li > .timeline-panel:after {
+                position: absolute;
+                top: 27px;
+                right: -14px;
+                display: inline-block;
+                border-top: 14px solid transparent;
+                border-left: 14px solid #fff;
+                border-right: 0 solid #fff;
+                border-bottom: 14px solid transparent;
+                content: " ";
+            }
+
+
         .timeline > li > .timeline-badge {
+            color: #fff;
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+            font-size: 1.4em;
+            text-align: center;
+            position: absolute;
+            top: 16px;
+            left: 50%;
+            margin-left: -25px;
+            background-color: #999999;
+            z-index: 100;
+            border-top-right-radius: 50%;
+            border-top-left-radius: 50%;
+            border-bottom-right-radius: 50%;
+            border-bottom-left-radius: 50%;
+        }
+
+        .timeline2 > li > .timeline-badge {
             color: #fff;
             width: 50px;
             height: 50px;
@@ -99,7 +197,19 @@
             float: right;
         }
 
+
+        .timeline2 > li.timeline-inverted > .timeline-panel {
+            float: right;
+        }
+
             .timeline > li.timeline-inverted > .timeline-panel:before {
+                border-left-width: 0;
+                border-right-width: 15px;
+                left: -15px;
+                right: auto;
+            }
+
+            .timeline2 > li.timeline-inverted > .timeline-panel:before {
                 border-left-width: 0;
                 border-right-width: 15px;
                 left: -15px;
@@ -112,6 +222,15 @@
                 left: -14px;
                 right: auto;
             }
+
+            .timeline2 > li.timeline-inverted > .timeline-panel:after {
+                border-left-width: 0;
+                border-right-width: 14px;
+                left: -14px;
+                right: auto;
+            }
+
+
 
 
 .timeline-title {
@@ -162,4 +281,68 @@
             left: -14px;
             right: auto;
         }
+}
+
+@media (max-width: 767px) {
+    ul.timeline2:before {
+        left: 40px;
+    }
+
+    ul.timeline2 > li > .timeline-panel {
+        width: calc(100% - 90px);
+        width: -moz-calc(100% - 90px);
+        width: -webkit-calc(100% - 90px);
+    }
+
+    ul.timeline2 > li > .timeline-badge {
+        left: 15px;
+        margin-left: 0;
+        top: 16px;
+        top: 16px;
+    }
+
+    ul.timeline2 > li > .timeline-panel {
+        float: right;
+    }
+
+        ul.timeline2 > li > .timeline-panel:before {
+            border-left-width: 0;
+            border-right-width: 15px;
+            left: -15px;
+            right: auto;
+        }
+
+        ul.timeline2 > li > .timeline-panel:after {
+            border-left-width: 0;
+            border-right-width: 14px;
+            left: -14px;
+            right: auto;
+        }
+}
+
+.container_2 {
+    display: none;
+    height: 350px;
+    overflow-y: auto;
+
+}
+
+#hideshow ,#hideshow1 {
+    position:absolute;
+    left: 45%;
+}
+
+#hideshow{
+    margin-left: 100px;
+}
+
+
+.container{
+    height: 350px; /* or any value */
+    overflow-y: auto;
+}
+
+.container_2{
+    height: 300px; /* or any value */
+    overflow-y: auto;
 }
